@@ -160,7 +160,7 @@ function fs_executable($filename) {
  * @return boolean   $result    true on success, otherwise false
  */
 function fs_mkdir($dirname, $perms = 0700) {
-    $result = mkdir(fs_import_filename($dirname, 0), $perms);
+    $result = @mkdir(fs_import_filename($dirname, 0), $perms);
 
     return $result;
 }
